add liteos_m draft

--- a/demo/Makefile
+++ b/demo/Makefile
@@ -8,7 +8,7 @@ all:
 	make -C count
 	make -C gm_test_enclaves
 	make -C seal_data
-
+	make -C liteos_m
 clean:
 	make -C host clean
 	make -C prime clean
@@ -19,3 +19,4 @@ clean:
 	make -C count clean
 	make -C gm_test_enclaves clean
 	make -C seal_data clean
+	make -C liteos_m clean
