--- a/demo/liteos_m/Makefile
+++ b/demo/liteos_m/Makefile
@@ -1,4 +1,5 @@
 APP = liteos_m
-APP_C_SRCS = main.c los_init.c
+APP_S_SRCS = los_dispatch.S
+APP_C_SRCS = main.c los_init.c los_memory.c los_task.c los_context.c
 EXTRA_CLEAN = $(APP).dump
 include $(PENGLAI_SDK)/app.mk
