feat: enable interrupt and timer (#4)
* enable interrupt

* penglai-sdk: lib: add sbi interface to start timer

* penglai-sdk: demo: liteos_m: enable timer (a simple working demo now)

* refactor timer handler

* remove unused code & disable multiple timer interrupts

* chore

* chore comment

--- a/demo/liteos_m/Makefile
+++ b/demo/liteos_m/Makefile
@@ -1,5 +1,5 @@
 APP = liteos_m
-APP_S_SRCS = los_dispatch.S
-APP_C_SRCS = main.c los_init.c los_memory.c los_task.c los_context.c
+APP_S_SRCS = los_dispatch.S los_exc.S los_start.S
+APP_C_SRCS = main.c los_init.c los_memory.c los_task.c los_context.c los_interrupt.c los_timer.c
 EXTRA_CLEAN = $(APP).dump
 include $(PENGLAI_SDK)/app.mk
