--- a/demo/liteos_m/Makefile
+++ b/demo/liteos_m/Makefile
@@ -1,5 +1,5 @@
 APP = liteos_m
 APP_S_SRCS = los_dispatch.S los_exc.S los_start.S
-APP_C_SRCS = main.c los_init.c los_memory.c los_task.c los_context.c los_interrupt.c los_timer.c
+APP_C_SRCS = main.c los_init.c los_memory.c los_task.c los_context.c los_interrupt.c los_timer.c los_mux.c los_sched.c los_sem.c los_sortlink.c los_tick.c los_event.c los_error.c
 EXTRA_CLEAN = $(APP).dump
 include $(PENGLAI_SDK)/app.mk
